outsource functions to util files

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <title>Connect four</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="onInit()">
     <table>
         <tbody id="game-board"></tbody>
     </table>
+    <script src="mat-util.js"></script>
+    <script src="util.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
