--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             </table>
         </div>
     </div>
+    <script src="lodash.js"></script>
     <script src="mat-util.js"></script>
     <script src="util.js"></script>
     <script src="script.js"></script>
