--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body onload="onInit()">
     <div class="app-container">
-        <h1>Connect four</h1>
+        <h1 class="index-page">Connect four 🔴🟡🔴🟡</h1>
         <div class="win-modal">
             <div class="win-msg">You won!</div>
             <button onclick="onInit()">Play again?</button>
