--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="app-container">
         <h1 class="index-page">Connect four 🔴🟡🔴🟡</h1>
         <div class="win-modal">
-            <div class="win-msg">You won!</div>
+            <div class="win-msg"><span class="win-msg-span"></span> won!</div>
             <button onclick="onInit()">Play again?</button>
         </div>
         <div class="game">
