--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connect four</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="dark-mode.css">
 </head>
 
 <body onload="onInit()">
@@ -21,6 +22,8 @@
             </table>
         </div>
     </div>
+    <script src="dark-mode.js"></script>
+    <!-- <script src="light-mode.js"></script> -->
     <script src="lodash.js"></script>
     <script src="mat-util.js"></script>
     <script src="util.js"></script>
