fun indicator of current player

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body onload="onInit()">
     <div class="app-container">
-        <h1 class="index-page">Connect four 🔴🟡🔴🟡</h1>
+        <h1 class="index-page">Connect four <span class="player-disc">🔴</span></h1>
         <div class="win-modal">
             <div class="win-msg"><span class="win-msg-span"></span> won!</div>
             <button onclick="onInit()">Play again?</button>
