--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connect four</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="dark-mode.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/dark-mode.css">
 </head>
 
 <body onload="onInit()">
@@ -22,12 +22,12 @@
             </table>
         </div>
     </div>
-    <script src="dark-mode.js"></script>
-    <!-- <script src="light-mode.js"></script> -->
-    <script src="lodash.js"></script>
-    <script src="mat-util.js"></script>
-    <script src="util.js"></script>
-    <script src="script.js"></script>
+    <script src="js/dark-mode.js"></script>
+    <script src="js/light-mode.js"></script>
+    <script src="js/lodash.js"></script>
+    <script src="js/mat-util.js"></script>
+    <script src="js/util.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
